<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 刷新 start -->
    <string name="drop_down_list_header_default_text">点击刷新&#8230;</string>
    <string name="drop_down_list_header_pull_text">下拉载入...&#8230;</string>
    <string name="drop_down_list_header_release_text">放开加载...&#8230;</string>
    <string name="drop_down_list_header_loading_text">正在载入...&#8230;</string>
    <string name="drop_down_list_footer_default_text">点击加载更多内容...</string>
    <string name="drop_down_list_footer_loading_text">正在加载...&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有可加载内容</string>
    <string name="image_content">Image</string>
    <string name="update_at">更新于:&#160;</string>
    <!-- 刷新 end -->
    <string name="app_name">格林豪泰</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hoteltitle_gelin">格林豪泰</string>
    <string name="menu_newscenter">新闻中心</string>
    <string name="menu_activity">活动信息</string>
    <string name="menu_myorder">我的订单</string>
    <string name="menu_userlogin">用户登录</string>
    <string name="menu_apply">应用推荐</string>
    <string name="menu_more">更多</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="forgetpassword">忘记密码？点击这里找回</string>
    <string name="noUser">非会员订单查询</string>
    <string name="login_username_tishi">请输入你的手机号/邮箱/会员卡号</string>
    <string name="register_name">姓         名：</string>
    <string name="register_phone">手         机：</string>
    <string name="register_password">密         码：</string>
    <string name="register_zhucema">注册验证码：</string>
    <string name="register_yanzhenma">验   证   码：</string>
    <string name="register_huoqu">获取</string>
    <string name="register_agree_left">我已阅读并已同意《</string>
    <string name="register_agree_center">格林豪泰服务条款</string>
    <string name="register_agree_right">》</string>
    <string name="register_text">现在注册数字会员卡，立送20+30元电子代金券</string>
    <string name="more_system">接受系统通知</string>
    <string name="more_weibo">腾讯微博绑定</string>
    <string name="more_guanyu">关于</string>
    <string name="more_guanyu_text">格林豪泰酒店管理集团是由徐曙光先生携多家美国公司在中国创办的专业化酒店管理集团，旗下拥有格林东方酒店、格林豪泰酒店、青皮树酒店、格林联盟酒店4个优质品牌及多个子品牌。目前，格林豪泰已经覆盖北京、上海、天津等400多座城市，拥有1700多家连锁酒店。且在美国、韩国、孟加拉国、越南等海外市场成功布点。</string>
    <string name="more_bangzu">帮助</string>
    <string name="more_pingfen">软件评分</string>
    <string name="more_fankui">用户反馈</string>
    <string name="more_vision">当前版本：</string>
    <string name="more_vision_text">当前的客户端已是最新版本</string>
    <string name="fankui_text">欢迎你提出宝贵的意见和建议。感谢你对格林豪泰的支持</string>
    <string name="fankui_phone_text">请你留下你的手机号码</string>
    <string name="fankui_phone_text_foot">(选填)</string>
    <string name="fankui_phone_text_hint">请你输入你的手机号码</string>
    <string name="fankui_text_hint">请你输入你的意见和建议</string>
    <string name="all">全部</string>
    <string name="please_key">请输入关键字</string>
    <string name="from">来源:</string>
    <string name="fabu">发布于:</string>
    <string name="hotelselet">酒店搜索</string>
    <string name="hotelcollect">常住/收藏</string>
    <string name="hotelcollect_message">还没有任何收藏记录</string>
    <string name="city">入住城市</string>
    <string name="key">关键字</string>
    <string name="time">入住时间</string>
    <string name="day">入住天数</string>
    <string name="filter">筛选</string>
    <string name="referee">推荐</string>
    <string name="distance">距离</string>
    <string name="price_s"> 价格↑</string>
    <string name="price_x"> 价格↓</string>
    <string name="score">评分</string>
    <string name="select">搜索</string>
    <string name="near_select">附近</string>
    <string name="score_foot">分/5分</string>
    <string name="price_h">￥</string>
    <string name="price_f">起</string>
    <string name="filter_btn">998特价房</string>
    <string name="filter_fangxing">房型</string>
    <string name="hotel_message_title">酒店详情</string>
    <string name="hotel_message_org">服务和荣誉：</string>
    <string name="hotel_message_money1">银联支付返现金:</string>
    <string name="hotel_message_money2">在线支付->提交->预付房费->银联支付</string>
    <string name="hotel_message_radio_room">房屋房价</string>
    <string name="hotel_message_radio_detail">酒店介绍</string>
    <string name="hotel_message_radio_topic">酒店点评</string>
    <string name="hotel_message_radio_detail_tishi">特别提示</string>
    <string name="hotel_message_radio_detail_cuxiao">促销信息</string>
    <string name="hotel_message_radio_detail_message">酒店信息</string>
    <string name="avg_score_h">综合评分：</string>
    <string name="avg_score_f">分/5分</string>
    <string name="sleep_score">睡眠舒适度：</string>
    <string name="service_score">服务热情度：</string>
    <string name="linyu_score">淋浴舒适度：</string>
    <string name="kefang_score">客房卫生度：</string>
    <string name="dianping">点评</string>
    <string name="more_dianping">更多点评</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>