<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/color_green">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rg_select_type"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            style="@style/RadioButtonStyle"
            android:text="@string/referee"
            android:id="@+id/rb_referee"/>

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/distance"
            android:id="@+id/rb_distance"/>

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/price_s"
            android:id="@+id/rb_price"/>

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/score"
            android:id="@+id/rb_score"/>

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/filter"
            android:id="@+id/rb_filter"/>

    </RadioGroup>


</LinearLayout>