<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/green_tree"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 新闻中心-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/news"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_newscenter"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 活动信息-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/activity"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_activity"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 我的订单-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/my_menu"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_myorder"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 用户登录-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/personal_center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_userlogin"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 应用推荐-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/apply"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_apply"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green"/>

    <!-- 更多-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_more"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_btn_go_normal"/>
    </LinearLayout>

</LinearLayout>