<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/title_background"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="综合评分:"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_avg_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.6"
            android:textColor="@color/color_orange"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分/5分"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(46条评论)"
            android:textColor="@color/color_orange"
            android:textSize="18sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_score"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_score_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.6"
            android:textSize="18sp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/pb_sleep"
            android:max="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_score"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_score_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.6"
            android:textSize="18sp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/pb_service"
            android:max="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linyu_score"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_score_bath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.6"
            android:textSize="18sp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/pb_bath"
            android:max="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kefang_score"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_score_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.6"
            android:textSize="18sp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/pb_room"
            android:max="50"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="点评"
        android:background="@color/color_orange"/>


</LinearLayout>
