<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_5" >

        <TextView
            android:id="@+id/select_lv_item_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/d_10"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/d_10"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/d_10"
            android:layout_marginTop="@dimen/d_10"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/select_lv_item_iv_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_1"
                    android:src="@drawable/wifi"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/select_lv_item_iv_park"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_1"
                    android:src="@drawable/park"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/select_lv_item_iv_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_1"
                    android:src="@drawable/breakfast"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d_5"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_h"
                    android:textColor="@color/color_gray" />

                <TextView
                    android:id="@+id/select_lv_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_f"
                    android:textColor="@color/color_gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d_10"
            android:layout_marginTop="@dimen/d_10"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/select_lv_item_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_foot"
                android:textColor="@color/color_green" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>